--- a/Web-Tienda-Ropa.html
+++ b/Web-Tienda-Ropa.html
@@ -32,14 +32,109 @@
 
     <h1>NUEVAS COLECCIONES</h1>
 
-    <div class="container-img">
-      <img src="Assets/images/image-3.jpg" alt="Mujer 1" />
-      <img src="Assets/images/image-6.jpg" alt="Mujer 2" />
-      <img src="Assets/images/image-4.jpg" alt="Mujer 3" />
-      <img src="Assets/images/image-5.jpg" alt="Hombre 1" />
-      <img src="Assets/images/image-1.jpg" alt="Hombre 2" />
-      <img src="Assets/images/image-2.jpg" alt="Hombre 3" />
+    <div class="container-main">
+      <div class="container-img">
+        <img class="img-items" src="Assets/images/image-3.jpg" alt="Mujer 1" />
+        <div class="container-text">
+          <p>Vestido</p>
+          <p class="bold">34.99€</p>
+        </div>
+      </div>
+
+      <div class="container-img">
+        <img class="img-items" src="Assets/images/image-6.jpg" alt="Mujer 2" />
+        <div class="container-text">
+          <p>Camisa</p>
+          <p class="bold">44.99€</p>
+        </div>
+      </div>
+
+      <div class="container-img">
+        <img class="img-items" src="Assets/images/image-4.jpg" alt="Mujer 3" />
+        <div class="container-text">
+          <p>Vaqueros</p>
+          <p class="bold">79.99€</p>
+        </div>
+      </div>
+
+      <div class="container-img">
+        <img class="img-items" src="Assets/images/image-5.jpg" alt="Hombre 1" />
+        <div class="container-text">
+          <p>Polo</p>
+          <p class="bold">44.95€</p>
+        </div>
+      </div>
+
+      <div class="container-img">
+        <img class="img-items" src="Assets/images/image-1.jpg" alt="Hombre 2" />
+        <div class="container-text">
+          <p>Camisa</p>
+          <p class="bold">25.00€</p>
+        </div>
+      </div>
+
+      <div class="container-img">
+        <img class="img-items" src="Assets/images/image-2.jpg" alt="Hombre 3" />
+        <div class="container-text">
+          <p>Camiseta</p>
+          <p class="bold">22.99€</p>
+        </div>
+      </div>
+      <div class="espacio-vacio"></div>
+    </div>
+
+    <div class="footer">
+      <div class="options-footer">
+        <img src="Assets/icons/icon-truck.svg" alt="Camion entrega" />
+      </div>
+
+      <div class="options-ancors">
+        <a href="#">Entrega</a>
+      </div>
+
+      <div class="options-ancors">
+        <a href="#">Devoluciones y cambios</a>
+      </div>
+
+      <div class="options-footer">
+        <img src="Assets/icons/icon-phone.svg" alt="Telefono" />
+      </div>
+
+      <div class="options-ancors">
+        <a href="#">913456789</a>
+      </div>
+
+      <div class="options-footer">
+        <img src="Assets/icons/icon-mail.svg" alt="Telefono" />
+      </div>
+
+      <div class="options-ancors">
+        <a href="#">shop@omix.com</a>
+      </div>
+    </div>
+
+    <div id="wrapper">
+      <div id="footer">
+        <div class="footerFloat">
+          <ul>
+            <li>
+              <img src="Assets/icons/icon-truck.svg" alt="Camion entrega" />
+              <a href="#">Entrega</a>
+            </li>
+            <li>
+              <a href="#">Devoluciones y cambios</a>
+            </li>
+            <li>
+              <img src="Assets/icons/icon-phone.svg" alt="Telefono" />
+              <a href="#">913456789</a>
+            </li>
+            <li>
+              <img src="Assets/icons/icon-mail.svg" alt="Telefono" />
+              <a href="#">shop@omix.com</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
-  <footer></footer>
 </html>
